# kedro-example

./: .envrc  README-kedro.md  README.md  pyproject.toml  todo.otl
conf/base/: catalog.yml
docs/source/: conf.py  index.rst
src/: setup.py
src/kedro_example/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/tests/: test_run.py
